k8s-jenkins/registry.deployment.service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    nodePort: 31320
    protocol: TCP
    targetPort: 5000
  selector:
    app: registry

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: registry
#   name: registry
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 5000
#     nodePort: 31320
#     protocol: TCP
#     targetPort: 5000
#   selector:
#     app: registry
